--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -1,13 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
-</head>
-<body>
-    <h1>About Me</h1>
-    <h2>Mat Emery</h2>
-    <p>Diesel Technician for 10 years , future developer</p>
-</body>
-</html>
+{% extends "base.html" %}
+{% load static %}
+
+{% block title %}About Me{% endblock %}
+
+{% block css %}
+<link rel="stylesheet" href="{% static 'css/about.css' %}" />
+{% endblock %}
+
+{% block content %}
+<div class="about-container">
+  <h1>About Me</h1>
+  <h2>Mat Emery</h2>
+
+  <div class="personal-info">
+    <p>
+        Diesel Technician for 10 years , future developer.
+    </p>
+  </div>
+
+
+
