--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -1,12 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home page</title>
-</head>
-<body>
-    <h1>Home page!!</h1>
-    <p>This will be an awesome home page when it grows up!</p>
-</body>
-</html>
+{% extends "base.html" %}
+{% load static %}
+
+{% block title %}Home Page{% endblock %}
+
+{% block css %}
+<link rel="stylesheet" href="{% static 'css/home.css' %}" />
+{% endblock %}
+
+{% block content %}
+<div class="home-container">
+  <h1>Welcome to the Home Page</h1>
+
+  <div class="welcome-section">
+   <p>Home page</p>
+    <p>
+      this will be an awesome home page when it grows up!
+    </p>
+  </div>
+{% endblock %}
