--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,16 +1,31 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
+{% load static %}
 {% load crispy_forms_tags %}
-{% block title %}
-    sign up
+
+{% block title %}Sign Up{% endblock %}
+
+{% block css %}
+<link rel="stylesheet" href="{% static 'css/home.css' %}" />
 {% endblock %}
 
 {% block content %}
-<divclass='container'> 
-    <h1>Sign up</h1>
-        <form method="post">
-            {% csrf_token %}
-            {{form|crispy}}
-            <button type="submit"class="btn btn-primary">Sign Up </button>
-        </form>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <h1 class="mb-4">Sign Up</h1>
+      
+      <form method="post">
+        {% csrf_token %}
+        {{ form|crispy }}
+        
+        <button type="submit" class="btn btn-primary">Sign Up</button>
+        <a href="{% url 'pages:home' %}" class="btn btn-secondary">Cancel</a>
+      </form>
+      
+      <div class="mt-3">
+        <p>Already have an account? <a href="{% url 'accounts:login' %}">Log in here</a></p>
+      </div>
     </div>
+  </div>
+</div>
 {% endblock %}
