--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-dark bg-dark fixed-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="{% url 'pages:home' %}">Blog Project</a>
+    <a class="navbar-brand">Blog</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -31,13 +31,13 @@
       <div class="offcanvas-body">
         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'pages:home' %}">Home</a>
+            <a class="nav-link" href="{% url 'home' %}" >Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'pages:about' %}">About</a>
+            <a class="nav-link">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'posts:list' %}">Posts</a>
+            <a class="nav-link">Posts</a>
           </li>
           {% if user.is_authenticated %}
           <li class="nav-item dropdown">
@@ -65,7 +65,7 @@
             <a class="nav-link" href="{% url 'login' %}">Log In</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'accounts:signup' %}">Sign Up</a>
+            <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
           </li>
           {% endif %}
         </ul>
