--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -19,11 +19,11 @@
         {{ form|crispy }}
         
         <button type="submit" class="btn btn-primary">Log In</button>
-        <a href="{% url 'pages:home' %}" class="btn btn-secondary">Cancel</a>
+        <a href="{% url 'home' %}" class="btn btn-secondary">Cancel</a>
       </form>
       
       <div class="mt-3">
-        <p>Don't have an account? <a href="{% url 'accounts:signup' %}">Sign up here</a></p>
+        <p>Don't have an account? <a href="{% url 'signup' %}">Sign up here</a></p>
       </div>
     </div>
   </div>
